# platform.core.uifw.libdri2

./: AUTHORS  COPYING  Makefile.am  configure.ac  libdri2.pc.in
debian/: changelog  control  copyright  libdri2-dev.install  rules
packaging/: libdri2.spec
src/: Makefile.am  dri2.c  dri2.h
